use z-index to give priority to the fix elements.

--- a/.static/basic.css
+++ b/.static/basic.css
@@ -45,6 +45,7 @@ div.is-sticky {
 a[class*="external"]:after {
     color: #00AA00;
     content: "↗";
+    z-index:40;
     font-size: 10px;
     font-weight: normal;
     position: relative;
@@ -54,6 +55,7 @@ a[class*="external"]:after {
 a[href*="perso.crans.org"]:after {
     color: #C200D3;
     content: "p";
+    z-index:40;
     font-size: 10px;
     font-weight: normal;
     position: relative;
@@ -63,6 +65,7 @@ a[href*="perso.crans.org"]:after {
 a[href*="www.dptinfo.ens-cachan.fr/~lbesson"]:after {
     color: #C200D3;
     content: "d";
+    z-index:40;
     font-size: 10px;
     font-weight: normal;
     position: relative;
@@ -72,6 +75,7 @@ a[href*="www.dptinfo.ens-cachan.fr/~lbesson"]:after {
 a[href*="besson.qc.to"]:after {
     color: #C200D3;
     content: "qc.to";
+    z-index:40;
     font-size: 7px;
     font-weight: normal;
     position: relative;
@@ -81,6 +85,7 @@ a[href*="besson.qc.to"]:after {
 a[href*="besson.or.gs"]:after {
     color: #C200D3;
     content: "or.gs";
+    z-index:40;
     font-size: 7px;
     font-weight: normal;
     position: relative;
@@ -94,6 +99,7 @@ a[href^="mailto"] {
 a[href$="pdf"]:after {
     color: #00AA00;
     content: "PDF";
+    z-index:40;
     font-size: 8px;
     font-weight: normal;
     position: relative;
@@ -103,6 +109,7 @@ a[href$="pdf"]:after {
 a[href^="https"]:after {
     color: #00AA00;
     content: "s";
+    z-index:40;
     font-size: 10px;
     font-weight: normal;
     position: relative;
@@ -116,6 +123,7 @@ a[href$="JPG"]:after,
 a[href$="jepg"]:after {
     color: #C200D3;
     content: "§";
+    z-index:40;
     font-size: 8px;
     font-weight: normal;
     position: relative;
@@ -129,8 +137,9 @@ a[class*="image"]:after{ content:""; }
 div.related {
     width: 100%;
     font-size: 90%;
-    position:   fixed;
-    top:        0;
+    position: fixed;
+    top: 0;
+    z-index: 100;
 }
 
 div.related h3 {
@@ -156,83 +165,6 @@ div.related.stuck {
     position:   fixed;
     top:        0;
 }
-
-/* -- Meny ------------------------------------------------------------------ */
-.meny {
-    display: none;
-    padding: 20px;
-    overflow: auto;
-    background: #333;
-    color: #eee;
-
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-    .meny ul {
-        margin-top: 10px;
-    }
-        .meny ul li {
-            display: inline-block;
-            width: 200px;
-            list-style: none;
-            font-size: 20px;
-            padding: 3px 10px;
-        }
-            .meny ul li:before {
-                content: '-';
-                margin-right: 5px;
-                color: rgba( 255, 255, 255, 0.2 );
-            }
-
-/**
- * Hint graphic that appears while menu is inactive
- */
-.meny-arrow {
-    position: fixed;
-    z-index: 10;
-
-    border: 10px solid transparent;
-
-    -webkit-transition: opacity 0.4s ease 0.4s;
-       -moz-transition: opacity 0.4s ease 0.4s;
-        -ms-transition: opacity 0.4s ease 0.4s;
-         -o-transition: opacity 0.4s ease 0.4s;
-            transition: opacity 0.4s ease 0.4s;
-}
-    .meny-left .meny-arrow {
-        left: 14px;
-        top: 50%;
-        margin-top: -16px;
-        border-left: 16px solid #333;
-    }
-    .meny-right .meny-arrow {
-        right: 14px;
-        top: 50%;
-        margin-top: -16px;
-        border-right: 16px solid #333;
-    }
-    .meny-top .meny-arrow {
-        left: 50%;
-        top: 14px;
-        margin-left: -16px;
-        border-top: 16px solid #333;
-    }
-    .meny-bottom .meny-arrow {
-        left: 50%;
-        bottom: 14px;
-        margin-left: -16px;
-        border-bottom: 16px solid #333;
-    }
-    .meny-active .meny-arrow {
-        opacity: 0;
-
-        -webkit-transition: opacity 0.2s ease;
-           -moz-transition: opacity 0.2s ease;
-            -ms-transition: opacity 0.2s ease;
-             -o-transition: opacity 0.2s ease;
-                transition: opacity 0.2s ease;
-    }
 
 /* -- sidebar --------------------------------------------------------------- */
 
